# portl

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  autoresearch.config.json  autoresearch.ideas.md  clippy.toml  deny.toml  install.sh  justfile  mise.toml  progress.md  rust-toolchain.toml  rustfmt.toml
.agents/skills/portl-release/: SKILL.md
.agents/skills/portl-testing/: SKILL.md
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci-e2e.yml  ci.yml  release.yml
.mise/tasks/release/: prep  tag  verify  watch
adapters/docker-portl/: Cargo.toml
adapters/docker-portl/images/: Dockerfile.reference  build.sh
adapters/docker-portl/src/: lib.rs
adapters/docker-portl/tests/: live.rs
adapters/manual-portl/: Cargo.toml
adapters/manual-portl/src/: main.rs
adapters/slicer-portl/: Cargo.toml
adapters/slicer-portl/src/: http.rs  lib.rs  main.rs  userdata.rs
adapters/slicer-portl/src/userdata/: install.sh.tmpl
adapters/slicer-portl/tests/: http_mock.rs  live.rs
crates/portl-agent/: Cargo.toml
crates/portl-agent/src/: audit.rs  caps_enforce.rs  config.rs  config_file.rs  config_file_template.toml  conn_registry.rs  endpoint.rs  gateway.rs  lib.rs  meta_handler.rs  metrics.rs  network_watchdog.rs  pair_handler.rs  pipeline.rs  rate_limit.rs  relay.rs  revocations.rs  session.rs  shell_handler.rs  shell_registry.rs  status_schema.rs  stream_io.rs  target_context.rs  tcp_handler.rs  ticket_handler.rs  udp_handler.rs  udp_registry.rs
crates/portl-agent/src/session_handler/: ghostty.rs  mod.rs  provider.rs  tmux_control.rs
crates/portl-agent/src/shell_handler/: env.rs  exec_capture.rs  mod.rs  pty_master.rs  pumps.rs  reject.rs  shutdown.rs  spawn.rs  user.rs
crates/portl-agent/tests/: agent_misc.rs  audit_balance.rs  audit_reject.rs  discovery_local.rs  gateway.rs  handshake_pair.rs  panic_abort.rs  pipeline_matrix.rs  pty_spawn.rs  rate_limit.rs  revocation_live_sessions.rs  rlimits.rs  session_e2e.rs  shell_e2e.rs  signals.rs  tcp_e2e.rs  udp_e2e.rs
crates/portl-agent/tests/common/: mod.rs
crates/portl-cli/: Cargo.toml
crates/portl-cli/src/: agent_ipc.rs  alias_store.rs  client_endpoint.rs  eid.rs  lib.rs  logging.rs  main.rs  release_binary.rs
crates/portl-cli/src/commands/: accept.rs  config.rs  docker.rs  doctor.rs  exec.rs  ghostty_smoke.rs  init.rs  install.rs  mint_root.rs  mod.rs  peer.rs  peer_resolve.rs  revocations.rs  revoke.rs  session.rs  session_share.rs  shell.rs  slicer.rs  status.rs  tcp.rs  udp.rs  whoami.rs
crates/portl-cli/src/commands/agent/: mod.rs  run.rs  service.rs
crates/portl-cli/src/commands/docker/: aliases.rs  bake.rs  docker_ops.rs  host_ops.rs  mod.rs  run.rs  types.rs
crates/portl-cli/src/commands/id/: export.rs  import.rs  mod.rs  new.rs  show.rs
crates/portl-cli/src/commands/install/: apply.rs  detect.rs  mod.rs  render.rs  resolve.rs
crates/portl-cli/src/commands/peer/: add_unsafe_raw.rs  invite.rs  ls.rs  mod.rs  pair.rs  unlink.rs
crates/portl-cli/src/commands/ticket/: caps.rs  issue.rs  ls.rs  mod.rs  prune.rs  revoke.rs  rm.rs  save.rs
crates/portl-cli/tests/: agent_run.rs  agent_shim_cli.rs  cli_ergonomics.rs  doctor_cli.rs  endpoint_close_cli.rs  gateway_cli.rs  ghostty_smoke.rs  help_cli.rs  id_cli.rs  init_install_cli.rs  m3_cli.rs  multicall.rs  shortcode_cli.rs  status_cli.rs  udp_cli.rs
crates/portl-core/: Cargo.toml
crates/portl-core/benches/: mint_verify.rs
crates/portl-core/src/: attach_control.rs  bootstrap.rs  caps.rs  endpoint.rs  error.rs  io.rs  labels.rs  lib.rs  pair_code.rs  pair_store.rs  paths.rs  peer_store.rs  runtime.rs  store_index.rs  terminal.rs  test_util.rs  ticket_store.rs  tls.rs  wire.rs
crates/portl-core/src/id/: keypair.rs  mod.rs  store.rs
crates/portl-core/src/net/: client.rs  mod.rs  session_client.rs  shell_client.rs  tcp_client.rs  udp_client.rs
crates/portl-core/src/rendezvous/: backend.rs  exchange.rs  mailbox.rs  memory.rs  mod.rs  short_code.rs  wormhole_crypto.rs  ws.rs
crates/portl-core/src/terminal/: tmux_cc.rs  zmx_control.rs
crates/portl-core/src/ticket/: canonical.rs  codec.rs  hash.rs  master.rs  mint.rs  mod.rs  offer.rs  schema.rs  sign.rs  verify.rs
crates/portl-core/src/wire/: session.rs  shell.rs  tcp.rs  udp.rs
crates/portl-core/tests/: endpoint.rs  id_roundtrip.rs  test_util_pair.rs  ticket_canonical.rs  ticket_chain.rs  ticket_golden.rs  ticket_hash.rs  ticket_master.rs  ticket_mint.rs  ticket_misc.rs  ticket_pop.rs  ticket_properties.rs  ticket_roundtrip.rs  ticket_schema.rs  ticket_sign.rs
crates/portl-proto/: Cargo.toml
crates/portl-proto/src/: error.rs  lib.rs  meta_v1.rs  pair_v1.rs  session_v1.rs  shell_v1.rs  tcp_v1.rs  ticket_v1.rs  udp_v1.rs  wire.rs
docs/: ENV.md  EXIT_CODES.md
docs/design/: 01-goals.md  02-architecture.md  020-architecture.md  03-tickets.md  030-tickets.md  04-protocols.md  040-protocols.md  05-bootstrap.md  06-docker.md  06-slicer.md  060-docker.md  065-slicer.md  06a-slicer.md  07-security.md  070-security.md  08-cli.md  080-cli.md  09-config.md  090-config.md  10-walkthroughs.md  11-workspace.md  110-workspace.md  12-roadmap.md  120-roadmap.md  13-open-questions.md  130-open-questions.md  140-v0.2-cleanup.md  README.md
docs/design/future/: 14-transport-abstraction.md  (+2 more)
docs/plans/: 010-v0.1.1-safety-net.md  020-v0.1.2-alias-isolation.md  030-v0.2-operability.md  2026-04-29-option-b-session-control.md  README.md
docs/specs/: 010-goals.md  020-architecture.md  030-tickets.md  050-bootstrap.md  060-docker.md  065-slicer.md  070-security.md  080-cli.md  090-config.md  100-walkthroughs.md  110-workspace.md  120-roadmap.md  130-open-questions.md  140-v0.2-operability.md  150-v0.1.1-safety-net.md  160-v0.1.2-alias-isolation.md  165-v0.3.2-observability.md  170-v0.3.3-relay.md  180-v0.3.4-peer-pairing.md  190-cli-ergonomics.md  200-persistent-sessions.md  210-session-control-lanes.md  220-local-first-session-sharing.md  230-native-session-provider.md  230-session-provider-ergonomics.md  README.md
scratch/: m4-ci-deferred.md  m4-smoke-run.md
(+5 files in other folders)
