[workspace]
resolver = "2"
members = [
    "crates/portl-core",
    "crates/portl-proto",
    "crates/portl-agent",
    "crates/portl-cli",
    "adapters/slicer-portl",
    "adapters/manual-portl",
]

[workspace.package]
version      = "0.0.1"
edition      = "2024"
license      = "MIT"
repository   = "https://github.com/KnickKnackLabs/portl"
authors      = ["KnickKnackLabs and portl contributors"]
rust-version = "1.89"

[workspace.dependencies]
# transport
iroh         = { version = "0.98", features = ["address-lookup-mdns"] }
iroh-base    = "0.98"
iroh-tickets = "0.5"
tokio        = { version = "1", features = ["full"] }
bytes        = "1"
futures-util = "0.3"

# crypto
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2          = "0.10"

# encoding
serde            = { version = "1", features = ["derive"] }
serde-big-array  = "0.5"
postcard         = { version = "1", features = ["use-std"] }
base32           = "0.5"
serde_json       = "1"

# CLI
clap      = { version = "4", features = ["derive", "env", "wrap_help"] }
anyhow    = "1"
thiserror = "2"

# observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
governor          = "0.8"

# testing
tokio-test = "0.4"
proptest   = "1.5"
criterion  = { version = "0.5", features = ["html_reports"] }
assert_cmd = "2"
tempfile   = "3"

# identity + age
age         = { version = "0.11", default-features = false, features = ["armor"] }
directories = "5"
hex         = "0.4"
rpassword   = "7"
qrcode      = "0.14"
zeroize     = { version = "1", features = ["derive"] }
rand        = "0.8"
rand_core   = "0.6"

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"
