[workspace]
resolver = "2"
members = [
    "crates/portl-core",
    "crates/portl-proto",
    "crates/portl-agent",
    "crates/portl-cli",
    "adapters/docker-portl",
    "adapters/slicer-portl",
    "adapters/manual-portl",
]

[workspace.package]
version      = "0.1.1"
edition      = "2024"
license      = "MIT"
repository   = "https://github.com/KnickKnackLabs/portl"
authors      = ["KnickKnackLabs and portl contributors"]
rust-version = "1.89"

[workspace.dependencies]
# transport
iroh         = { version = "0.98", features = ["address-lookup-mdns"] }
iroh-base    = "0.98"
iroh-tickets = "0.5"
tokio        = { version = "1", features = ["full"] }
tokio-util   = "0.7"
bytes        = "1"
futures-util = "0.3"
portable-pty = "0.8"
dashmap      = "6"

# crypto
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2          = "0.10"

# encoding
serde            = { version = "1", features = ["derive"] }
serde-big-array  = "0.5"
postcard         = { version = "1", features = ["use-std"] }
base32           = "0.5"
base64           = "0.22"
serde_json       = "1"
toml             = "0.8"

# CLI
clap      = { version = "4", features = ["derive", "env", "wrap_help"] }
anyhow    = "1"
thiserror = "2"
crossterm = "0.29"

# observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-journald  = "0.3"
governor          = "0.8"

# testing
tokio-test = "0.4"
prometheus-client = "0.23"
proptest   = "1.5"
criterion  = { version = "0.5", features = ["html_reports"] }
assert_cmd = "2"
tempfile   = "3"
n0-future  = "0.3"

# identity + age
age         = { version = "0.11", default-features = false, features = ["armor"] }
directories = "5"
hex         = "0.4"
rpassword   = "7"
qrcode      = "0.14"
zeroize     = { version = "1", features = ["derive"] }
rand        = "0.8"
rand_core   = "0.6"
uuid        = { version = "1", features = ["v4"] }
humantime   = "2"
nix         = { version = "0.30", features = ["fs", "poll", "process", "signal", "term", "user"] }
async-trait = "0.1"
bollard     = "0.17"
rusqlite    = { version = "0.32", features = ["bundled"] }
reqwest     = { version = "0.13", default-features = false, features = ["rustls", "json", "query"] }
wiremock    = "0.6"

[workspace.lints.rust]
# deny (not forbid) so we can narrowly allow unsafe in
# shell_handler's fork/exec user-switch hook on Linux.
unsafe_code          = "deny"
rust_2018_idioms     = { level = "warn", priority = -1 }
# unreachable_pub + use_self + option_if_let_else deliberately
# NOT enabled workspace-wide — tightening those is a separate
# refactor and would produce ~70 drive-by changes per clippy run.
# Revisit in v0.2 once the CLI namespace collapse (140 §4)
# touches every affected file anyway.
unused_qualifications = "warn"

[workspace.lints.clippy]
# Groups. pedantic is enabled wholesale with targeted allows (see
# rust-clippy book: enabling whole pedantic is acceptable when
# paired with a generous #[allow] list for the annoying ones).
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }

# Pedantic allows (unchanged from v0.1).
module_name_repetitions = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
must_use_candidate      = "allow"

# Cargo group: workspaces inevitably pull multiple minor versions
# of common deps (tokio, futures, rand); this one is known-noisy.
multiple_crate_versions = "allow"
# We aren't publishing to crates.io yet; shut the "missing metadata"
# lints off at the workspace level. When we turn on publishing
# (post-v0.2), remove these two allows and add the required fields.
cargo_common_metadata   = "allow"

# Selected restriction lints (the rust-clippy book's canonical
# "strict-coding-style" cherry-picks).
dbg_macro     = "deny"
todo          = "warn"
unimplemented = "warn"
# print_stdout / print_stderr are NOT enabled workspace-wide
# because the CLI crate legitimately prints to stdout/stderr.
# If we later split "library code" vs "CLI code" more cleanly,
# library crates can opt in per-crate.

# Selected nursery lint that has stabilised in production use
# (tokio, sqlx). Whole-nursery is upstream-discouraged; this one
# is individually vetted.
redundant_clone = "warn"

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"
panic         = "abort"
