[workspace]
resolver = "2"
members = [
    "crates/portl-core",
    "crates/portl-proto",
    "crates/portl-agent",
    "crates/portl-cli",
    "adapters/docker-portl",
    "adapters/slicer-portl",
    "adapters/manual-portl",
]

[workspace.package]
version      = "0.8.1"
edition      = "2024"
license      = "MIT"
repository   = "https://github.com/KnickKnackLabs/portl"
authors      = ["KnickKnackLabs and portl contributors"]
rust-version = "1.93"

[workspace.dependencies]
# transport
iroh         = { version = "0.98.2", features = ["address-lookup-mdns"] }
iroh-base    = "0.98"
iroh-relay   = { version = "0.98", default-features = false, features = ["server"] }
iroh-tickets = "0.5"
# TLS for the embedded relay server (v0.3.3.2+). Feature set
# matches iroh-relay's own default: ring provider, tls12, logging
# off by default. No aws-lc-rs (v0.2.4 removed it to fix the macOS
# SIGABRT).
rustls          = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
# PEM loading uses rustls-pki-types' PemObject trait (replacement
# for the archived rustls-pemfile crate).
rustls-pki-types = { version = "1", features = ["std"] }
tokio        = { version = "1", features = [
    "fs", "io-std", "io-util", "macros", "net", "process",
    "rt-multi-thread", "signal", "sync", "time",
] }
tokio-util   = "0.7"
bytes        = "1"
socket2      = "0.6"
futures-util = "0.3"
http         = "1"
portable-pty = "0.8"
dashmap      = "6"

# crypto
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2          = "0.10"

# wormhole-compatible shortcode rendezvous
tokio-websockets = { version = "0.13.2", features = ["client", "getrandom", "ring", "rustls-webpki-roots"] }
spake2           = "0.4"
crypto_secretbox = "0.1.1"
hkdf             = "0.12"

# encoding
serde            = { version = "1", features = ["derive"] }
serde-big-array  = "0.5"
postcard         = { version = "1", features = ["use-std"] }
base32           = "0.5"
base64           = "0.22"
serde_json       = "1"
toml             = "0.8"

# CLI
# clap default features pruned: portl-cli uses #[derive(Parser)] but
# no #[arg(env = …)] and never uses the `unicode` or `cargo` features,
# so the corresponding defaults are dropped. `wrap_help` is retained
# because portl-cli/tests/help_cli.rs snapshots wrapped help output.
# Trimming the unused defaults shaved ~0.9 s off the dominant compile
# unit (portl-cli lib) in the v0.2.2-tuning autoresearch session.
clap      = { version = "4", default-features = false, features = [
    "std", "derive", "help", "usage", "error-context",
    "suggestions", "wrap_help",
] }
anyhow    = "1"
thiserror = "2"
crossterm = "0.29"

# observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-journald  = "0.3"
governor          = "0.8"

# testing
tokio-test = "0.4"
prometheus-client = "0.23"
proptest   = "1.5"
criterion  = { version = "0.5", features = ["html_reports"] }
assert_cmd = "2"
tempfile   = "3"
n0-future  = "0.3"

# identity + age
age         = { version = "0.11", default-features = false, features = ["armor"] }
directories = "5"
fd-lock     = "4"
hex         = "0.4"
rpassword   = "7"
qrcode      = "0.14"
zeroize     = { version = "1", features = ["derive"] }
rand        = "0.8"
rand_core   = "0.6"
uuid        = { version = "1", features = ["v4"] }
humantime   = "2"
nix         = { version = "0.30", features = ["fs", "poll", "process", "resource", "signal", "term", "user"] }
async-trait = "0.1"
bollard     = "0.17"
# reqwest 0.13's `rustls` feature forces `aws-lc-rs` as the rustls
# crypto provider. Everything else in the tree (iroh, hickory-net,
# noq-proto) uses `ring`. When both providers are linked into the
# same binary, the two BoringSSL-derived C libraries collide on
# symbols like `free` / internal allocator hooks, which manifests
# on macOS as `malloc: pointer being freed was not allocated` /
# SIGABRT on the first TLS handshake (see rustls/rustls#1877).
# Using `rustls-no-provider` keeps reqwest's rustls wiring but
# drops the aws-lc-rs dep; the CLI installs `ring` as the process-
# wide default provider at startup.
reqwest     = { version = "0.13", default-features = false, features = ["rustls-no-provider", "json", "query", "blocking"] }
tar         = "0.4"
zstd        = "0.13"
url         = "2"
wiremock    = "0.6"

[workspace.lints.rust]
# deny (not forbid) so we can narrowly allow unsafe in
# shell_handler's fork/exec user-switch hook on Linux.
unsafe_code          = "deny"
rust_2018_idioms     = { level = "warn", priority = -1 }
# unreachable_pub + use_self + option_if_let_else deliberately
# NOT enabled workspace-wide — tightening those is a separate
# refactor and would produce ~70 drive-by changes per clippy run.
# Revisit in v0.2 once the CLI namespace collapse (140 §4)
# touches every affected file anyway.
unused_qualifications = "warn"

[workspace.lints.clippy]
# Groups. pedantic is enabled wholesale with targeted allows (see
# rust-clippy book: enabling whole pedantic is acceptable when
# paired with a generous #[allow] list for the annoying ones).
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }

# Pedantic allows (unchanged from v0.1).
module_name_repetitions = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
must_use_candidate      = "allow"

# Cargo group: workspaces inevitably pull multiple minor versions
# of common deps (tokio, futures, rand); this one is known-noisy.
multiple_crate_versions = "allow"
# We aren't publishing to crates.io yet; shut the "missing metadata"
# lints off at the workspace level. When we turn on publishing
# (post-v0.2), remove these two allows and add the required fields.
cargo_common_metadata   = "allow"

# Selected restriction lints (the rust-clippy book's canonical
# "strict-coding-style" cherry-picks).
dbg_macro     = "deny"
todo          = "warn"
unimplemented = "warn"
# print_stdout / print_stderr are NOT enabled workspace-wide
# because the CLI crate legitimately prints to stdout/stderr.
# If we later split "library code" vs "CLI code" more cleanly,
# library crates can opt in per-crate.

# Selected nursery lint that has stabilised in production use
# (tokio, sqlx). Whole-nursery is upstream-discouraged; this one
# is individually vetted.
redundant_clone = "warn"

[profile.dev]
debug = "line-tables-only"
incremental = false

[profile.test]
debug = "line-tables-only"
incremental = false

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"
panic         = "abort"
