[package]
name         = "docker-portl"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true
description  = "Docker adapter for portl (M4)."

[lints]
workspace = true

[dependencies]
portl-core   = { version = "0.7.1", path = "../../crates/portl-core" }
portl-agent  = { version = "0.7.1", path = "../../crates/portl-agent" }
anyhow       = { workspace = true }
async-trait  = { workspace = true }
bollard      = { workspace = true }
futures-util = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
hex          = { workspace = true }
iroh-base    = { workspace = true }
tempfile     = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio      = { workspace = true }
