[package]
name         = "manual-portl"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true
description  = "Manual/reference adapter for portl — prints operator instructions, no orchestration."

[lints]
workspace = true

[[bin]]
name = "portl-manual-adapter"
path = "src/main.rs"
# bin/main.rs has no #[test] functions; skip the empty test target
# (~500 ms macOS syspolicyd first-exec scan per nextest run).
test = false

[dependencies]
portl-core = { version = "0.8.0", path = "../../crates/portl-core" }
anyhow     = { workspace = true }
