[package]
name         = "slicer-portl"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true
description  = "Slicer adapter for portl (M5). Subcommand plugin exposing `portl slicer …`."

[lints]
workspace = true

[[bin]]
name = "portl-slicer-adapter"
path = "src/main.rs"

[dependencies]
portl-core = { version = "0.0.1", path = "../../crates/portl-core" }
anyhow     = { workspace = true }
