[package]
name         = "slicer-portl"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true
description  = "Slicer adapter for portl (M5)."

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "portl-slicer-adapter"
path = "src/main.rs"

[dependencies]
portl-core  = { version = "0.2.1", path = "../../crates/portl-core" }
portl-agent = { version = "0.2.1", path = "../../crates/portl-agent" }
anyhow      = { workspace = true }
async-trait = { workspace = true }
base64      = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
hex         = { workspace = true }
iroh-base   = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
