[package]
name         = "portl-agent"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true
description  = "portl agent runtime: handshake, discovery, and session acceptance."

[lints]
workspace = true

[dependencies]
portl-core  = { version = "0.1.0", path = "../portl-core" }
portl-proto = { version = "0.1.0", path = "../portl-proto" }
anyhow      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
postcard    = { workspace = true }
hex         = { workspace = true }
toml        = { workspace = true }
tracing     = { workspace = true }
rand        = { workspace = true }
iroh        = { workspace = true }
iroh-base   = { workspace = true }
tokio       = { workspace = true }
tokio-util  = { workspace = true }
governor    = { workspace = true }
dashmap     = { workspace = true }
nix         = { workspace = true }
tracing-subscriber = { workspace = true }
bytes       = { workspace = true }
sha2        = { workspace = true }
reqwest     = { workspace = true }
prometheus-client = { workspace = true }
directories = { workspace = true }
[target.'cfg(target_os = "linux")'.dependencies]
tracing-journald = { workspace = true }

[dev-dependencies]
portl-core = { version = "0.1.0", path = "../portl-core", features = ["test-util"] }
tempfile  = { workspace = true }
iroh-base = { workspace = true }
tokio      = { workspace = true }
tokio-util = { workspace = true }
n0-future  = { workspace = true }
wiremock   = { workspace = true }
