[package]
name         = "portl-agent"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true
description  = "portl agent runtime: handshake, discovery, and session acceptance."

[features]
# Enables a `maybe_test_panic()` hook at the top of `run` that panics
# when `PORTL_TEST_PANIC_AT=startup` is set in the environment. Used
# by `tests/panic_abort.rs` to verify release-profile `panic = "abort"`
# actually aborts. Never enable in production builds.
test-panic-trigger = []

[lints]
workspace = true

[dependencies]
portl-core  = { version = "0.6.4", path = "../portl-core" }
portl-proto = { version = "0.6.4", path = "../portl-proto" }
 anyhow      = { workspace = true }
 thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
postcard    = { workspace = true }
hex         = { workspace = true }
tracing     = { workspace = true }
ed25519-dalek = { workspace = true }
rand        = { workspace = true }
iroh        = { workspace = true }
iroh-base   = { workspace = true }
iroh-relay  = { workspace = true }
rustls           = { workspace = true }
rustls-pki-types = { workspace = true }
tokio       = { workspace = true }
tokio-util  = { workspace = true }
governor    = { workspace = true }
dashmap     = { workspace = true }
nix         = { workspace = true }
tracing-subscriber = { workspace = true }
bytes       = { workspace = true }
sha2        = { workspace = true }
url         = { workspace = true }
prometheus-client = { workspace = true }
directories = { workspace = true }
uuid        = { workspace = true }
[target.'cfg(target_os = "linux")'.dependencies]
tracing-journald = { workspace = true }

[dev-dependencies]
portl-core = { version = "0.6.4", path = "../portl-core", features = ["test-util"] }
tempfile  = { workspace = true }
iroh-base = { workspace = true }
tokio      = { workspace = true }
tokio-util = { workspace = true }
n0-future  = { workspace = true }
# Pre-main hook used by `tests/common/mod.rs` to install a per-test-binary
# watchdog that aborts the process after `PORTL_TEST_WATCHDOG_SECS` (default
# 30s). Prevents a single hung integration test (e.g. iroh relay stalls)
# from wedging `cargo test --workspace` indefinitely.
ctor = "0.2"
