[package]
name         = "portl-agent"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true
description  = "portl agent runtime: handshake, discovery, and session acceptance."

[features]
# Enables a `maybe_test_panic()` hook at the top of `run` that panics
# when `PORTL_TEST_PANIC_AT=startup` is set in the environment. Used
# by `tests/panic_abort.rs` to verify release-profile `panic = "abort"`
# actually aborts. Never enable in production builds.
test-panic-trigger = []
ghostty-vt = ["dep:libghostty-vt", "libghostty-vt/link-static"]
ghostty-vt-static = ["ghostty-vt"]

[lints]
workspace = true

[dependencies]
portl-core  = { version = "0.8.1", path = "../portl-core" }
portl-proto = { version = "0.8.1", path = "../portl-proto" }
 anyhow      = { workspace = true }
 thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
postcard    = { workspace = true }
hex         = { workspace = true }
humantime   = { workspace = true }
tracing     = { workspace = true }
ed25519-dalek = { workspace = true }
rand        = { workspace = true }
iroh        = { workspace = true }
iroh-base   = { workspace = true }
iroh-relay  = { workspace = true }
rustls           = { workspace = true }
rustls-pki-types = { workspace = true }
tokio       = { workspace = true }
tokio-util  = { workspace = true }
governor    = { workspace = true }
dashmap     = { workspace = true }
nix         = { workspace = true }
tracing-subscriber = { workspace = true }
bytes       = { workspace = true }
sha2        = { workspace = true }
url         = { workspace = true }
prometheus-client = { workspace = true }
directories = { workspace = true }
uuid        = { workspace = true }
# Keep default-features off: upstream defaults enable Kitty graphics support,
# which is not needed for the native session provider MVP or static smoke.
libghostty-vt = { version = "0.1.1", git = "https://github.com/Uzaaft/libghostty-rs", rev = "5ac47e9eb166add2c00c432bc65c279133629712", package = "libghostty-vt", default-features = false, optional = true }
[target.'cfg(target_os = "linux")'.dependencies]
tracing-journald = { workspace = true }

[dev-dependencies]
portl-core = { version = "0.8.1", path = "../portl-core", features = ["test-util"] }
tempfile  = { workspace = true }
iroh-base = { workspace = true }
tokio      = { workspace = true }
tokio-util = { workspace = true }
n0-future  = { workspace = true }
# Pre-main hook used by `tests/common/mod.rs` to install a per-test-binary
# watchdog that aborts the process after `PORTL_TEST_WATCHDOG_SECS` (default
# 30s). Prevents a single hung integration test (e.g. iroh relay stalls)
# from wedging the nextest/cargo test runner indefinitely.
ctor = "0.2"
