[package]
name         = "portl-cli"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true
description  = "portl CLI — single multicall binary for `portl` (operator) and `portl agent` (target-side)."

[lints]
workspace = true

[[bin]]
name = "portl"
path = "src/main.rs"

[dependencies]
portl-core  = { version = "0.1.0", path = "../portl-core" }
portl-proto = { version = "0.1.0", path = "../portl-proto" }
portl-agent  = { version = "0.1.0", path = "../portl-agent" }
docker-portl = { version = "0.1.0", path = "../../adapters/docker-portl" }
slicer-portl = { version = "0.1.0", path = "../../adapters/slicer-portl" }
clap         = { workspace = true }
tokio       = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
postcard    = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
iroh-base   = { workspace = true }
iroh        = { workspace = true }
iroh-tickets = { workspace = true }
rpassword   = { workspace = true }
hex         = { workspace = true }
qrcode      = { workspace = true }
zeroize     = { workspace = true }
humantime   = { workspace = true }
n0-future   = { workspace = true }
crossterm   = { workspace = true }
fd-lock     = { workspace = true }
nix         = { workspace = true }
reqwest     = { workspace = true }
async-trait = { workspace = true }
bollard     = { workspace = true }

[dev-dependencies]
portl-core = { version = "0.1.0", path = "../portl-core", features = ["test-util"] }
assert_cmd = { workspace = true }
tempfile   = { workspace = true }
iroh-tickets = { workspace = true }
ed25519-dalek = { workspace = true }
