[package]
name         = "portl-cli"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true
description  = "portl CLI — multicall surface for `portl`, `portl-agent`, and `portl-gateway`."

[lints]
workspace = true

[features]
ghostty-vt = ["dep:libghostty-vt", "libghostty-vt/link-static", "portl-agent/ghostty-vt"]
ghostty-vt-static = ["ghostty-vt", "portl-agent/ghostty-vt-static"]

[[bin]]
name = "portl"
path = "src/main.rs"
# bin/main.rs has no #[test] functions; skip the empty test target
# (~500 ms macOS syspolicyd first-exec scan per nextest run).
test = false

[dependencies]
portl-core  = { version = "0.7.8", path = "../portl-core" }
portl-proto = { version = "0.7.8", path = "../portl-proto" }
portl-agent  = { version = "0.7.8", path = "../portl-agent" }
docker-portl = { version = "0.7.8", path = "../../adapters/docker-portl" }
slicer-portl = { version = "0.7.8", path = "../../adapters/slicer-portl" }
clap         = { workspace = true }
clap_complete = "4"
clap_mangen = "0.2"
tokio       = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
postcard    = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
bytes       = { workspace = true }
iroh-base   = { workspace = true }
iroh        = { workspace = true }
iroh-tickets = { workspace = true }
rpassword   = { workspace = true }
hex         = { workspace = true }
sha2        = { workspace = true }
rand        = { workspace = true }
tar         = { workspace = true }
zstd        = { workspace = true }
qrcode      = { workspace = true }
zeroize     = { workspace = true }
humantime   = { workspace = true }
n0-future   = { workspace = true }
crossterm   = { workspace = true }
fd-lock     = { workspace = true }
nix         = { workspace = true }
reqwest     = { workspace = true }
async-trait = { workspace = true }
bollard     = { workspace = true }
# Keep default-features off for the portability spike: upstream defaults enable
# Kitty graphics support, which is not needed for the minimal static-link smoke.
libghostty-vt = { version = "0.1.1", git = "https://github.com/Uzaaft/libghostty-rs", rev = "5ac47e9eb166add2c00c432bc65c279133629712", package = "libghostty-vt", default-features = false, optional = true }

[dev-dependencies]
portl-core = { version = "0.7.8", path = "../portl-core", features = ["test-util"] }
assert_cmd = { workspace = true }
tempfile   = { workspace = true }
iroh-tickets = { workspace = true }
ed25519-dalek = { workspace = true }
