[package]
name         = "portl-core"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true
description  = "Core types and primitives for portl: tickets, sessions, endpoint wrapper."

[lints]
workspace = true

[features]
# Enables `portl_core::test_util`, which ships in-process wiring
# helpers (e.g. `pair()`). Off by default so release builds of
# downstream crates don't leak test infrastructure into their
# public API. Test and integration suites opt in via the crate's
# own dev-dependencies and via downstream `[dev-dependencies]
# portl-core = { features = ["test-util"] }`.
test-util = []

[dependencies]
iroh         = { workspace = true }
iroh-base    = { workspace = true }
tokio        = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }

[dev-dependencies]
portl-core = { version = "0.0.1", path = ".", features = ["test-util"] }
tokio      = { workspace = true }
