[package]
name         = "portl-core"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true
description  = "Core types and primitives for portl: tickets, sessions, endpoint wrapper."

[lints]
workspace = true

[features]
# Enables `portl_core::test_util`, which ships in-process wiring
# helpers (e.g. `pair()`). Off by default so release builds of
# downstream crates don't leak test infrastructure into their
# public API. Test and integration suites opt in via the crate's
# own dev-dependencies and via downstream `[dev-dependencies]
# portl-core = { features = ["test-util"] }`.
test-util = []

[dependencies]
iroh          = { workspace = true }
iroh-base     = { workspace = true }
iroh-tickets  = { workspace = true }
tokio         = { workspace = true }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
ed25519-dalek = { workspace = true }
sha2          = { workspace = true }
serde           = { workspace = true }
serde-big-array = { workspace = true }
serde_json      = { workspace = true }
postcard        = { workspace = true }
base32          = { workspace = true }
zeroize       = { workspace = true }
rand          = { workspace = true }
rand_core     = { workspace = true }
hex           = { workspace = true }
directories   = { workspace = true }
age           = { workspace = true }
n0-error      = "0.1"
bytes         = { workspace = true }
socket2       = { workspace = true }
 async-trait      = { workspace = true }
 prometheus-client = { workspace = true }

[dev-dependencies]
portl-core = { version = "0.2.2", path = ".", features = ["test-util"] }
tokio      = { workspace = true }
proptest   = { workspace = true }
criterion  = { workspace = true }
 tempfile           = { workspace = true }
 tracing-subscriber = { workspace = true }

[[bench]]
name = "mint_verify"
harness = false
