[package]
name         = "portl-core"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true
description  = "Core types and primitives for portl: tickets, sessions, endpoint wrapper."

[lints]
workspace = true

[features]
# Enables `portl_core::test_util`, which ships in-process wiring
# helpers (e.g. `pair()`). Off by default so release builds of
# downstream crates don't leak test infrastructure into their
# public API. Test and integration suites opt in via the crate's
# own dev-dependencies and via downstream `[dev-dependencies]
# portl-core = { features = ["test-util"] }`.
test-util = []

[dependencies]
iroh          = { workspace = true }
iroh-base     = { workspace = true }
iroh-tickets  = { workspace = true }
tokio         = { workspace = true }
anyhow        = { workspace = true }
# Direct rustls dep to let us install the `ring` crypto provider as
# the process-wide default from a single `portl_core::tls::install_default_crypto_provider()`
# helper. Required because `reqwest` is configured with
# `rustls-no-provider` (to keep aws-lc-rs out of the binary);
# without this call any reqwest TLS handshake panics with
# `No provider set`. rustls is already in the tree transitively via
# iroh, so this adds no link-time cost — only the one new API call.
rustls        = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"] }
thiserror     = { workspace = true }
tracing       = { workspace = true }
ed25519-dalek = { workspace = true }
sha2          = { workspace = true }
serde           = { workspace = true }
serde-big-array = { workspace = true }
serde_json      = { workspace = true }
postcard        = { workspace = true }
base32          = { workspace = true }
zeroize       = { workspace = true }
rand          = { workspace = true }
rand_core     = { workspace = true }
hex           = { workspace = true }
directories   = { workspace = true }
age           = { workspace = true }
n0-error      = "0.1"
bytes         = { workspace = true }
socket2       = { workspace = true }
 async-trait      = { workspace = true }
 prometheus-client = { workspace = true }
tokio-websockets = { workspace = true }
spake2           = { workspace = true }
crypto_secretbox = { workspace = true }
hkdf             = { workspace = true }
url              = { workspace = true }
futures-util     = { workspace = true }
http             = { workspace = true }

[dev-dependencies]
portl-core = { version = "0.6.2", path = ".", features = ["test-util"] }
tokio      = { workspace = true }
tokio-websockets = { workspace = true, features = ["server"] }
proptest   = { workspace = true }
criterion  = { workspace = true }
tempfile           = { workspace = true }
tracing-subscriber = { workspace = true }

[[bench]]
name = "mint_verify"
harness = false
